--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Групповая загрузка файлов с Drag and Drop</title>
+    <title>Перетаскивание изображений из Telegram</title>
     <style>
         #dropArea {
             border: 2px dashed #ccc;
@@ -17,34 +17,37 @@
             border-color: #000;
             background-color: #f0f0f0;
         }
-        #fileList {
+        #preview {
             margin-top: 20px;
-            list-style: none;
-            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
         }
-        #fileList li {
-            margin: 5px 0;
-            padding: 8px;
+        #preview img {
+            margin: 5px;
+            max-width: 200px;
+            max-height: 200px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            background-color: #f9f9f9;
+            object-fit: cover;
+        }
+        #sendButton {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-    <form id="uploadForm">
-        <div id="dropArea">Перетащите файлы сюда или нажмите, чтобы выбрать</div>
-        <input type="file" id="fileInput" multiple style="display: none;">
-        <button type="button" onclick="uploadFiles()">Загрузить файлы</button>
-    </form>
-
-    <ul id="fileList"></ul>
+    <div id="dropArea">Перетащите изображения из Telegram сюда</div>
+    <div id="preview"></div>
+    <button id="sendButton" onclick="sendImages()">Отправить</button>
 
     <script>
         const dropArea = document.getElementById('dropArea');
-        const fileInput = document.getElementById('fileInput');
-        const fileList = document.getElementById('fileList');
-        let filesArray = [];
+        const preview = document.getElementById('preview');
+        const sendButton = document.getElementById('sendButton');
+        let imageFiles = [];
 
         dropArea.addEventListener('dragover', (event) => {
             event.preventDefault();
@@ -58,44 +61,56 @@
         dropArea.addEventListener('drop', (event) => {
             event.preventDefault();
             dropArea.classList.remove('dragover');
+            
             const files = event.dataTransfer.files;
-            handleFiles(files);
-        });
-
-        dropArea.addEventListener('click', () => {
-            fileInput.click();
-        });
-
-        fileInput.addEventListener('change', (event) => {
-            const files = event.target.files;
-            handleFiles(files);
+            if (files.length > 0) {
+                handleFiles(files);
+            } else {
+                const items = event.dataTransfer.items;
+                for (let i = 0; i < items.length; i++) {
+                    if (items[i].type === "text/html") {
+                        items[i].getAsString(html => {
+                            const parser = new DOMParser();
+                            const doc = parser.parseFromString(html, 'text/html');
+                            const img = doc.querySelector('img');
+                            if (img && img.src) {
+                                displayImage(img.src);
+                            }
+                        });
+                    } else if (items[i].type.startsWith("image/")) {
+                        const file = items[i].getAsFile();
+                        handleFiles([file]);
+                    }
+                }
+            }
         });
 
         function handleFiles(files) {
             for (let i = 0; i < files.length; i++) {
-                filesArray.push(files[i]);
+                imageFiles.push(files[i]);
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    displayImage(e.target.result);
+                };
+                reader.readAsDataURL(files[i]);
             }
-            updateFileList();
         }
 
-        function updateFileList() {
-            fileList.innerHTML = ''; // Очистка текущего списка
-            filesArray.forEach((file, index) => {
-                const listItem = document.createElement('li');
-                listItem.textContent = `${file.name} (${(file.size / 1024).toFixed(2)} KB)`;
-                fileList.appendChild(listItem);
-            });
+        function displayImage(src) {
+            const img = document.createElement('img');
+            img.src = src;
+            preview.appendChild(img);
         }
 
-        function uploadFiles() {
-            if (filesArray.length === 0) {
-                alert('Пожалуйста, выберите файлы для загрузки.');
+        function sendImages() {
+            if (imageFiles.length === 0) {
+                alert('Пожалуйста, добавьте изображения перед отправкой.');
                 return;
             }
 
             const formData = new FormData();
-            filesArray.forEach(file => {
-                formData.append('files[]', file);
+            imageFiles.forEach(file => {
+                formData.append('images[]', file);
             });
 
             fetch('your-upload-endpoint-url', {
@@ -105,13 +120,14 @@
             .then(response => response.json())
             .then(data => {
                 console.log(data);
-                alert('Файлы успешно загружены.');
-                filesArray = []; // Очистка массива после успешной загрузки
-                updateFileList(); // Обновление списка файлов
+                alert('Изображения успешно отправлены.');
+                // Очистка после успешной отправки
+                preview.innerHTML = '';
+                imageFiles = [];
             })
             .catch(error => {
                 console.error('Ошибка:', error);
-                alert('Произошла ошибка при загрузке файлов.');
+                alert('Произошла ошибка при отправке изображений.');
             });
         }
     </script>
